# windows7-drivers

./: .appveyor.yml  .clang-format  .git-blame-ignore-revs  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md  add_cert.bat  appveyor.yml  build_driver.bat  build_drivers.bat  check_ddk.bat  check_env.bat  clean_driver.bat  clean_drivers.bat  directory.build.props  packages.config  setenv.bat  sign.bat
.appveyor/: build.ps1  test.ps1
.github/workflows/: ci.yml
km/: build.ps1
km/src/: .gitattributes  .gitignore  dirs
km/src/minimal/: main.c  sources
km/src/nt_namespace/: device.c  device.h  main.c  nt2dos.c  nt2dos.h  sources
km/src/simple/: device.c  main.c
km/src/special/: dirs
km/src/special/nt_namespace/: control_codes.h  device.c
km/src/special/nt_path_converter/: device.c
km/src/special/sysenter/: sources
km/src/sysenter/: main.c
scripts/: build.ps1  setup-hooks.sh  test.ps1
src/: dirs
src/minimal/: main.c
src/minimal/vs12/: minimal.vs12.vcxproj
src/nt_path_converter/: control_codes.h  device.c  main.c  nt2dos.c  nt2dos.h  sources
src/nt_path_converter/vs12/: nt_path_converter.vs12.vcxproj
src/simple/: device.c  sources
src/simple/vs12/: simple.vs12.vcxproj
src/sysenter/: main.c  sources
src/sysenter/vs12/: sysenter.vs12.sln  sysenter.vs12.vcxproj
src/test/: device.c  device.h  main.c  sources
src/test/vs12/: test.vs12.sln  test.vs12.vcxproj
um/: CMakeLists.txt  README.md  common.cmake
um/libnt_path_converter/: CMakeLists.txt  README.md
um/libnt_path_converter/utils/: CMakeLists.txt
um/libservice/: README.md
um/libservice/src/: service_handle.cpp
um/libservice/utils/: CMakeLists.txt  stop_service.cpp
um/libsimple/: README.md
um/libsimple/include/libsimple/: device.hpp
um/libsimple/src/: device.cpp
um/libsimple/utils/: CMakeLists.txt
um/service/: CMakeLists.txt  README.md
um/service/include/libservice/: handle.hpp  service_handle.hpp
um/service/include/service/: common.hpp  device.hpp  handle.hpp  service.hpp  service_handle.hpp  service_manager.hpp  singleton.hpp  windows_error.hpp
um/service/src/: device.cpp  handle.cpp  service.cpp  service_manager.cpp  windows_error.cpp
um/service/test/: CMakeLists.txt  windows_error.cpp
um/service/utils/: CMakeLists.txt  install_service.cpp  start_service.cpp  stop_service.cpp  uninstall_service.cpp
um/wrappers/: CMakeLists.txt
um/wrappers/nt_namespace/: CMakeLists.txt  README.md
um/wrappers/nt_namespace/include/nt_namespace/: device.hpp
um/wrappers/nt_namespace/src/: device.cpp
um/wrappers/nt_namespace/utils/: CMakeLists.txt  convert_nt_path.cpp
um/wrappers/simple/: CMakeLists.txt  README.md
um/wrappers/simple/include/simple/: device.hpp
um/wrappers/simple/src/: device.cpp
um/wrappers/simple/utils/: CMakeLists.txt  exchange_ints.cpp
um/wrappers/special/: CMakeLists.txt
um/wrappers/special/nt_namespace/: CMakeLists.txt  README.md
um/wrappers/special/nt_namespace/include/libnt_namespace/: device.hpp
um/wrappers/special/nt_namespace/include/nt_namespace/: device.hpp
um/wrappers/special/nt_namespace/src/: device.cpp
um/wrappers/special/nt_namespace/utils/: CMakeLists.txt  convert_nt_path.cpp
um/wrappers/special/nt_path_converter/: README.md
um/wrappers/special/nt_path_converter/src/: device.cpp
um/wrappers/special/nt_path_converter/utils/: CMakeLists.txt  convert_nt_path.cpp
utils/: CMakeLists.txt  README.md  install_service.cpp  start_service.cpp  stop_service.cpp  uninstall_service.cpp
utils/libnt_path_converter/: CMakeLists.txt  README.md
utils/libnt_path_converter/include/libnt_path_converter/: all.hpp  device.hpp
utils/libnt_path_converter/src/: device.cpp
utils/libnt_path_converter/utils/: convert_nt_path.cpp
utils/libservice/: CMakeLists.txt  README.md
utils/libservice/include/libservice/: all.hpp  common.hpp  device.hpp  handle.hpp  interface.hpp  service.hpp  service_handle.hpp  service_manager.hpp  singleton.hpp  windows_error.hpp
utils/libservice/src/: device.cpp  handle.cpp  service.cpp  service_handle.cpp  service_manager.cpp  windows_error.cpp
utils/libservice/test/: CMakeLists.txt  windows_error.cpp
utils/libservice/utils/: install_service.cpp  start_service.cpp  uninstall_service.cpp
utils/libsimple/: CMakeLists.txt  README.md
utils/libsimple/utils/: exchange_ints.cpp
utils/libtest/: CMakeLists.txt  README.md
utils/libtest/include/libtest/: all.hpp  device.hpp
utils/libtest/src/: device.cpp
utils/libtest/utils/: CMakeLists.txt  exchange_ints.cpp
